# Destinote

./: .env  Cargo.toml  docker-compose.yml
frontend/cDiary/: package-lock.json  package.json
frontend/cDiary/src/: App.css  App.jsx
frontend/cDiary/src/api/: diary.js
frontend/cDiary/src/components/HomeFooter/: HomeFooter.css  HomeFooter.jsx
frontend/cDiary/src/components/diaryPage/: DiaryPage.css  DiaryPage.jsx
frontend/cDiary/src/components/home/: home.css  home.jsx
frontend/cDiary/src/components/loginForm/: LoginForm.css  LoginForm.jsx
src/: config.rs  initDB.rs  main.rs  models.rs
