[package]
name = "c_diary"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
postgres = "0.19.10"
tokio = { version = "1.45.0", features = ["full"]}
serde = { version = "1.0.104", features = ["derive"]}
dotenv = "0.15.0"
config = "0.15.11"
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "macros"] }
actix-cors = "0.7.1"
